# ethwarsaw-hackathon

./: .gitignore  LICENSE  README.md
aleph-weth/: Cargo.toml  lib.rs
backend/: eth-bridge-abi.json  events-saver.js  events_saver.js  index.js  package-lock.json  package.json  poll-blocks.js  sync.js  utils.js
contracts/aleph/aleph-weth/: Cargo.toml  lib.rs
contracts/aleph/eth-bridge/: lib.rs
contracts/eth/: AlephConnector.sol
eth-bridge/: Cargo.toml
eth-frontend/: package-lock.json  package.json
eth-frontend/src/: App.js
eth-frontend/src/components/contract/: abi.js  address.js
eth-frontend/src/form/: Form.js
mytoken/: Cargo.toml  lib.rs
test-generator/: package.json
test-generator/scripts/: get-test-data.ts
